# zhlian-ai-site

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  deploy.yml
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt  test.db  test_crud.db  test_sync.db
backend/alembic/: env.py
backend/alembic/versions/: 5016183b2b34_initial_articles_categories_tags.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: articles.py  categories.py  tags.py
backend/app/crud/: __init__.py  articles.py
backend/app/services/: sync.py
backend/tests/: test_api.py  test_config.py  test_crud.py  test_sync.py
content/: README.md  categories.json  tags.json
content/articles/cases/: batch-condition-identification-and-traceability.md  batch-record-intelligent-review.md  batch-record-review-agent.md  coating-formulation-process-quality-analysis.md  control-loop-diagnostic-agent.md  high-purity-process-anomaly-guard.md  kiln-operation-optimization-agent.md  (+3 more)
docs/: backend-design.md  content-model.md
docs/audits/: 2026-07-15-site-audit.md
docs/plans/: 2026-07-13-phase1-content-data-refactor.md  2026-07-13-portal-redesign.md  2026-07-14-phase2-backend-admin.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: robots.txt  site-data.json  sitemap.xml
frontend/src/: App.tsx  admin.css  styles.css  types.ts
scripts/: build-content.py  package.sh  sync-content-to-db.py  validate-content.py
server/: ai.zlinfot.com.conf  backend-deploy.sh  backend-rollback.sh  deploy.sh  enable-https.sh  health-check.sh  install.sh  rollback.sh  run-with-environment-file.py  staging.ai.zlinfot.com.conf
server/systemd/: zlai-backend.service
src/: App.tsx  styles.css
tests/: deploy-scripts.sh
(+39 files in other folders)
